--- a/style.css
+++ b/style.css
@@ -22,6 +22,96 @@ h2{
 }
 
 .sign-in-box{
-    background:gray;
+    background:rgba(255,255,255,0.2);
     text-align:center;
+    width: 285px;
+    height:235px;
+    /*padding-top:15px;*/
+    /*padding-bottom:30px;*/
+
+
+    margin-top:15px;
+    margin-right:auto;
+    /*margin-left:579px;*/
+    margin-left:auto;
+
+    border-radius:2%;
+}
+
+#sign-in-button{
+    
+    text-align: center;
+        background: rgba(255, 255, 255, 0.1);
+        padding: 35px;
+        border-radius: 5px;
+        border: none;
+        box-shadow: none;
+    
+}
+#sign-in-button:hover{
+    background:rgba(255,255,255,0.4);
+}
+
+
+#register {
+    color:white;
+    font-size:11.5px;
+    font-family:Arial;
+
+    padding-bottom:30px;
+
+    text-align:center;
+
+   
+}
+#register:hover{
+    text-decoration:underline;
+}
+
+
+
+
+
+#instructions{
+    color:white;
+    font-family:Arial;
+    font-size:11.5px;
+    padding-bottom:3px;
+}
+#instructions:hover{
+    text-decoration: underline;
+}
+
+
+
+
+
+#forget-password{
+    color:white;
+    font-family:Arial;
+    font-size:11.5px;
+}
+#forget-password:hover{
+    text-decoration: underline;
+}
+
+
+
+
+
+#bottom-text{
+    color:white;
+    font-family:Arial;
+    font-size:11.5px;
+
+    text-align:center;
+
+    
+    margin:15px auto;
+    margin-left:auto;
+}
+#bottom-text:hover{
+    text-decoration: underline;
+
+    
 }
