--- a/style.css
+++ b/style.css
@@ -5,10 +5,15 @@ body{
 }
 
 .logo {
+    
     margin-left: auto;
     margin-right: auto;
+    
 }
 img {
+    display:block;
+    margin-left: auto;
+    margin-right: auto;
     width :400px;
     height: 138px;
     
@@ -20,12 +25,12 @@ h2{
     font-size:24px;
     font-weight:bold;
 }
-
+ 
 .sign-in-box{
-    background:rgba(255,255,255,0.2);
+    background:rgba(255,255,255,0.1);
     text-align:center;
-    width: 285px;
-    height:235px;
+    width: 185px;
+    height:300px;
     
 
 
@@ -47,7 +52,7 @@ h2{
     
 }
 #sign-in-button:hover{
-    background:rgba(255,255,255,0.4);
+    background:rgba(255,255,255,0.1);
 }
 
 
